[package]
name = "suiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3"
unique_id = "0.1.5"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
futures = "0.3.29"
